# s21_calculator

./: .gitignore  CMakeLists.txt  Makefile
cmake/: CopyRecursive.cmake
src/: CMakeLists.txt  main.cpp
src/Models/: CMakeLists.txt  Makefile  SessionModel.cpp  SessionModel.h  test  test.c
src/Models/calculator/: calculator.c  calculator.h  internal.c
src/Models/preparer/: internal.c  preparer.c  preparer.h
src/Models/translator/: checks.c  operations.c  processing.c  translator.c  translator.h
src/Models/utils/: common.c  common.h  stack.c  stack.h
src/Services/Calculator/: Makefile
src/Services/Calculator/preparer/: checks.c  preparer.c
src/Services/Calculator/utils/: stack.c
src/Services/CalculatorService/: CMakeLists.txt  Makefile  calculator_service.c  calculator_service.h  test.c
src/Services/CalculatorService/calculator/: calculator.c  calculator.h
src/Services/CalculatorService/preparer/: internal.c  preparer.h
src/Services/CalculatorService/translator/: translator.c  translator.h
src/Services/CalculatorService/utils/: common.c  operation_shortcuts.c  stack.c  stack.h
src/Views/: CMakeLists.txt  StyleSheet.qml  main.qml  qmlSources.qrc
src/Views/CustomComponents/: MHeavySwitch.qml  MRadioButton.qml  qmldir
src/Views/SimpleCalculator/: MExtraButtons.qml  MSimpleButtons.qml  MSimpleCalculator.qml  qmldir
